# kionas

./: .dockerignore  .gitignore  Agents.md  CONTRIBUTING.md  CTE_ALIAS_FIX_PLAN.md  Cargo.toml  DOCKER_DEV_COMMANDS.md  PHASE4D_JOIN_PREDICATE_RESEARCH.md  PHASE4D_SPRINT2_COMPLETION_ASSESSMENT.md  PHASE4D_SPRINT2_STATUS_SUMMARY.md  README.md  ROADMAP.md  SESSION_REDIS_ANALYSIS.md  UI_INTEGRATION_ANALYSIS.md  build_output.txt  clippy.toml
client/: Cargo.toml  build.rs
client/src/: main.rs
client/src/tests/: main_tests.rs
flight_proxy/: Cargo.toml
flight_proxy/src/: main.rs
kionas/: Cargo.toml
kionas/proto/: filter_predicate.proto  interops_service.proto  metastore_service.proto  warehouse_auth_service.proto  warehouse_service.proto  worker_service.proto
kionas/src/: config.rs  constants.rs  consul.rs  lib.rs  logging.rs  redis_monitoring.rs
kionas/src/monitoring/: cluster_info.rs  mod.rs  redis_pool.rs  system_metrics.rs  tests.rs  worker_info.rs
kionas/src/parser/: dialect.rs  mod.rs  sql.rs
kionas/src/planner/: aggregate_spec.rs  distributed_plan.rs  distributed_validate.rs  error.rs  explain.rs  expr_evaluator.rs  filter_type_checker.rs  join_spec.rs  logical_plan.rs  mod.rs  physical_plan.rs  physical_translate.rs  physical_validate.rs  predicate_expr.rs  translate.rs  validate.rs
kionas/src/planner/tests/: expr_evaluator_tests.rs  mod.rs  predicate_parser_tests.rs
kionas/src/session/: mod.rs
kionas/src/sql/: constraints.rs  datatypes.rs  mod.rs  query_model.rs
kionas/src/tests/: config_tests.rs  mod.rs  redis_monitoring_tests.rs  utils_redaction_tests.rs
kionas/src/utils/: mod.rs
metastore/: Cargo.toml  build.rs
metastore/src/: config.rs  main.rs
metastore/src/services/: metastore_service.rs  mod.rs
metastore/src/services/actions/: create_database.rs  create_group.rs  create_role.rs  create_schema.rs  create_table.rs  create_transaction.rs  create_user.rs  delete_group.rs  delete_user.rs  drop_role.rs  drop_schema.rs  drop_table.rs  get_database.rs  get_schema.rs  get_table.rs  get_transaction.rs  (+5 more)
server/: Cargo.toml  build.rs
server/src/: auth_setup.rs  config.rs  consul.rs  counters.rs  handlers.rs  lib.rs  main.rs  metrics.rs  server.rs  session.rs  tls.rs  workers_pool.rs
server/src/auth/: jwt.rs  mod.rs  persistence.rs
server/src/core/: catalog.rs  database.rs  domain_service.rs  mod.rs  table.rs  warehouse.rs
server/src/janitor/: mod.rs
server/src/parser/: mod.rs  sql.rs
server/src/planner/: engine.rs  join_planning.rs  mod.rs  stage_extractor.rs
server/src/providers/: context_builder.rs  identifier.rs  metastore_resolver.rs  mod.rs  relation_metadata.rs  table_provider.rs  type_mapping.rs
server/src/services/: interops_service_server.rs  metastore_client.rs  mod.rs  request_context.rs  warehouse_auth_service.rs  warehouse_service_server.rs  worker_service_client.rs
server/src/statement_handler/: create_database.rs  create_schema.rs  create_table.rs  distributed_dag.rs  helpers.rs  insert.rs  mod.rs  query_select.rs  use_warehouse.rs
server/src/tasks/: mod.rs
server/src/tests/: counters_tests.rs  janitor_cleanup_tests.rs  janitor_server_stats_counters_tests.rs  phase4d_sprint1_integration_tests.rs  phase4d_sprint2_integration_tests.rs  planner_engine_tests.rs  planner_stage_extractor_tests.rs  providers_module_tests.rs  services_warehouse_service_server_tests.rs  session_cleanup_tests.rs  session_observability_tests.rs  session_ttl_tests.rs  spike_union_exec.rs  statement_handler_dml_insert_tests.rs  statement_handler_query_select_tests.rs  statement_handler_shared_distributed_dag_tests.rs  statement_handler_shared_helpers_tests.rs  tasks_mod_tests.rs  warehouse_state_query_counters_tests.rs
server/src/transactions/: maestro.rs  mod.rs
server/src/warehouse/: constraint_cache.rs  mod.rs  pool.rs  state.rs
server/src/workers/: mod.rs
ui_backend/: API_MAPPING.md  Cargo.toml
ui_backend/frontend/: DASHBOARD_EDITING_GUIDE.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.mts
ui_backend/frontend/src/: index.tsx
ui_backend/src/: main.rs
ui_backend/static/: app.js  index.html  styles.css
worker/: .gitignore  Cargo.toml  build.rs
worker/src/: authz.rs  config.rs  counters.rs  init.rs  lib.rs  main.rs  metrics.rs  monitoring.rs
worker/src/execution/: artifacts.rs  join.rs  mod.rs  pipeline.rs  pipeline_core.rs  pipeline_exchange_io.rs  pipeline_exchange_partitioning.rs  pipeline_exchange_validation.rs  pipeline_relation_columns.rs  pipeline_scan_io.rs  pipeline_scan_pruning.rs  pipeline_telemetry.rs  pipeline_union.rs  pipeline_upstream.rs  planner.rs  query.rs  router.rs  window.rs  window_frame.rs  window_functions.rs
worker/src/flight/: client_pool.rs  conversion.rs  mod.rs  server.rs
worker/src/interops/: client.rs  manager.rs  mod.rs
worker/src/services/: create_database.rs  create_schema.rs  create_table.rs  interops_service_client.rs  mod.rs  query.rs  query_execution.rs  query_join.rs  worker_service_server.rs
worker/src/state/: mod.rs
worker/src/storage/: deltalake.rs  exchange.rs  minio.rs  minio_pool.rs  mock.rs  mod.rs  object_store_adapter.rs  object_store_pool.rs  staging.rs
worker/src/telemetry/: mod.rs
worker/src/tests/: authz_tests.rs  counters_tests.rs  execution_aggregate_mod_tests.rs  execution_is_operator_tests.rs  execution_join_tests.rs  execution_pipeline_tests.rs  execution_planner_tests.rs  execution_query_tests.rs  execution_type_coercion_tests.rs  flight_client_pool_tests.rs  flight_conversion_tests.rs  flight_server_tests.rs  predicate_eval_tests.rs  router_tests.rs  services_query_execution_tests.rs  services_worker_service_server_tests.rs  storage_exchange_tests.rs  transactions_maestro_insert_tests.rs  transactions_maestro_uri_tests.rs  window_functions_tests.rs
worker/src/transactions/: insert_coercion.rs  insert_contract.rs  insert_record_batch.rs  interops_pool.rs  maestro.rs  mod.rs  task_executor.rs  tx_lifecycle.rs
worker/src/txn/: manifest.rs
worker/tests/: execution_type_coercion_tests.rs  staging_tests.rs
(+380 files in other folders)
