[workspace]
members = [
	"server",
	"worker",
	"client",
	"kionas",
    "tool",
    "metastore",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots", "tls-webpki-roots", "gzip"] }
tonic-reflection = "0.12.3"
env_logger = "0.11"
# global postgres dependency for sqlx
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
chrono = "0.4.38"
prost = "0.13.5"
prost-types = "0.13.5"
async-trait = "0.1.64"