[package]
name = "client"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio.workspace = true
tonic.workspace = true
tonic14 = { package = "tonic", version = "0.14.5", features = ["transport"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
tonic-reflection = "0.12.3"
prost = "0.13.5"
prost-types = "0.13.5"
redis = { version = "1.1.0", features = ["tokio-comp"] }
kionas = { path = "../kionas" }
base64 = "0.22"
toml = "0.8"
deadpool = "0.12.1"
webpki = "0.21.0"
jsonwebtoken = "8.1"
futures.workspace = true
arrow.workspace = true
arrow-cast = { version = "58.0.0", features = ["prettyprint"] }
parquet.workspace = true
arrow-flight.workspace = true
uuid = "1.22.0"
rand = "0.8"

[build-dependencies]
tonic-build = "0.12.3"
prost-build = "0.13"
