[package]
name = "flight_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
arrow.workspace = true
arrow-flight.workspace = true
tonic.workspace = true
chrono.workspace = true
jsonwebtoken = "8.1"

