[package]
name = "kionas"
version = "0.1.0"
edition = "2024"

[dependencies]
deltalake = "0.31.1"
sqlparser = "0.59.0"
uuid = { version = "1.0", features = ["v4"] }
tokio.workspace = true
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.9.0"
sysinfo = "0.29"
config = "0.13"
regex = "1.5"
md5 = "0.7.0"
get_if_addrs = "0.5"
redis = { version = "0.25", features = ["tokio-comp"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
hostname = "0.3"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
