[package]
name = "metastore"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tonic.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
tonic-reflection.workspace = true
prost = "0.13.5"
prost-types = "0.13.5"
kionas = { path = "../kionas" }
base64 = "0.22"
toml = "0.8"
arrow = "57.2.0"
parquet = "57.2.0"
sqlx.workspace = true
chrono.workspace = true
async-trait.workspace = true
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7.0" # for connection pooling with sqlx


[build-dependencies]
tonic-build = "0.12.3"
prost-build = "0.13"


