[package]
name = "server"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio.workspace = true
tonic.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
tonic-reflection.workspace = true
prost = "0.13.5"
prost-types = "0.13.5"
# rdkafka = { version = "0.37.0", features = ["tokio"] }
redis = { version = "1.1.0", features = ["tokio-comp"] }
kionas = { path = "../kionas" }
base64 = "0.22"
toml = "0.8"
deadpool = "0.12.1"
webpki = "0.21.0"
jsonwebtoken = "8.1"
arrow.workspace = true
parquet.workspace = true
sqlx.workspace = true
chrono.workspace = true
rustls.workspace = true
uuid = "1.22.0"
deltalake = { version = "0.31.1", features = ["s3"] }
datafusion = { version = "52.2.0", features = ["parquet", "sql"] }
url = "2"
sysinfo = "0.29"

[build-dependencies]
tonic-build = "0.12.3"
prost-build = "0.13"
