[package]
name = "ui_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
kionas = { path = "../kionas" }
redis = { version = "1.1.0", features = ["tokio-comp"] }
deadpool = "0.12.1"
axum = "0.8.4"
url = "2"
