[package]
name = "worker"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio.workspace = true
tonic.workspace = true
tonic14 = { package = "tonic", version = "0.14.5", features = ["transport"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
tonic-reflection = "0.12.3"
prost = "0.13.5"
prost-types = "0.13.5"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
redis = { version = "0.25", features = ["tokio-comp"] }
kionas = { path = "../kionas" }
base64 = "0.22"
toml = "0.8"
deadpool = "0.12.1"
jsonwebtoken = "8.1"
arrow.workspace = true
parquet.workspace = true
arrow-flight.workspace = true
uuid = "1.22.0"
chrono.workspace = true
bytes = "1"
futures = "0.3"
aws-config = { version = "1.8.15", default-features = false, features = ["rustls", "rt-tokio"], optional = true }
aws-sdk-s3 = { version = "1.8.15", default-features = false, features = ["rustls", "rt-tokio"], optional = true }
aws-smithy-http = "0.60"
aws-types = "1.3"
async-trait.workspace = true
http = "0.2"
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }
# use the workspace rustls to control provider features

# Delta Lake and object-store integration
deltalake = { version = "0.31.1", features = ["s3"] }
object_store = { version = "0.13.1", features = ["aws"] }
url = "2"


[build-dependencies]
tonic-build = "0.12.3"
prost-build = "0.13"

[features]
# storage backend selection features
# - `storage-minio`: enable Minio/S3-compatible provider (uses aws-config + aws-sdk-s3)
# - `storage-aws`: enable AWS S3 provider (same libs)
default = ["storage-minio"]
storage-minio = ["aws-config", "aws-sdk-s3"]
storage-aws = ["aws-config", "aws-sdk-s3"]
